# budget-api

./: .dockerignore  .gitignore  .gitlab-ci.yml  .mypy  .python-version  .releaserc  Dockerfile  Dockerfile-dev  Pipfile  README.md  TODO.txt  db.sqlite3  docker-compose-prod.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: Graph.py  README.md  Validators.py  admin.py  forms.py  helper.py  load_scripts.py  models.py  printer.py  serializers.py  tests.py  urls.py  views.py
api2/: SampleData.py  admin.py  apps.py  constants.py  filters.py  models.py  printer.py  queries.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
budget/: pagination.py  settings.py  urls.py  wsgi.py
ci/: Dockerfile
cron/: cron.py
docker/: .docker-compose.yml.swp
docs/: Budget.postman_collection.json  api.md  db_revsions.md  deployment.md  deployment_procedure.md  deployments.md  environment_example.py  environment_variables.txt
helm/: Chart.yaml  README.md  values.yaml
reports/: constants.py  predictor.py  time_buckets.py  types.py  urls.py  utils.py  views.py
scripts/: build.sh  build_amd64.sh  build_arm.sh  build_dev_and_push.sh  build_prod_and_push.sh  build_staging_and_push.sh  deploy.sh  docker-entrypoint.sh  init  install-ci.sh  load_budgets.sh  local_db.sh  migrate.sh  prod_start.sh  qa  run.sh  run_dev.sh  run_docker.sh  shell  wait-for-servers.py
web/: Graph.py  Validators.py  admin.py  forms.py  helper.py  load_scripts.py  models.py  printer.py  serializers.py  tests.py  urls.py  views.py
(+168 files in other folders)
