[tool.poetry]
name = "budget-api"
version = "2.1.0"
description = ""
authors = ["fargus plumdoodle <fargusplumdoodle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.2.1"
django-cors-headers = "^3.11.0"
django-filter = "^21.1"
django-prometheus = "^2.2.0"
djangorestframework = "^3.13.1"
drf-nested-routers = "^0.93.4"
prometheus-client = "^0.12.0"
psycopg2-binary = "^2.9.3"
requests = "^2.27.1"
Django = "^4.1.7"
uWSGI = "^2.0.20"
django-oauth-toolkit = "^1.6.3"
drf-spectacular = "^0.21.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

mypy = "^0.931"
django-stubs = "^1.9.0"
djangorestframework-stubs = "^1.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
